tests/ui/traits/const-traits/super-traits-fail-3.yyn.stderr
error: `[const]` is not allowed here
  --> $DIR/super-traits-fail-3.rs:27:44
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] trait Bar: [const] Foo {}
   |                                            ^^^^^^^
   |
note: this trait is not `const`, so it cannot have `[const]` trait bounds
  --> $DIR/super-traits-fail-3.rs:27:33
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] trait Bar: [const] Foo {}
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:34:17
   |
LL | const fn foo<T: [const] Bar>(x: &T) {
   |                 ^^^^^^^ can't be applied to `Bar`
   |
help: mark `Bar` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] const trait Bar: [const] Foo {}
   |                                 +++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:34:17
   |
LL | const fn foo<T: [const] Bar>(x: &T) {
   |                 ^^^^^^^ can't be applied to `Bar`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Bar` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] const trait Bar: [const] Foo {}
   |                                 +++++

error[E0277]: the trait bound `T: [const] Foo` is not satisfied
  --> $DIR/super-traits-fail-3.rs:38:7
   |
LL |     x.a();
   |       ^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
